--- a/ETL_proj.ipynb
+++ b/ETL_proj.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "5        B   34875"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Size</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>151315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>202307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>205863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>34875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Size\n",
+       "Store        \n",
+       "1      151315\n",
+       "2      202307\n",
+       "3       37392\n",
+       "4      205863\n",
+       "5       34875"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_type = stores_df.drop(columns=['Type'])\n",
+    "drop_type.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +322,7 @@
        "2010-03-05        NaN        NaN  211.350143         8.106      False  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +337,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-02-05</th>\n",
+       "      <td>1</td>\n",
+       "      <td>42.31</td>\n",
+       "      <td>2.572</td>\n",
+       "      <td>211.096358</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38.51</td>\n",
+       "      <td>2.548</td>\n",
+       "      <td>211.242170</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-19</th>\n",
+       "      <td>1</td>\n",
+       "      <td>39.93</td>\n",
+       "      <td>2.514</td>\n",
+       "      <td>211.289143</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-26</th>\n",
+       "      <td>1</td>\n",
+       "      <td>46.63</td>\n",
+       "      <td>2.561</td>\n",
+       "      <td>211.319643</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-03-05</th>\n",
+       "      <td>1</td>\n",
+       "      <td>46.50</td>\n",
+       "      <td>2.625</td>\n",
+       "      <td>211.350143</td>\n",
+       "      <td>8.106</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Store  Temperature  Fuel_Price         CPI  Unemployment\n",
+       "Date                                                                \n",
+       "2010-02-05      1        42.31       2.572  211.096358         8.106\n",
+       "2010-02-12      1        38.51       2.548  211.242170         8.106\n",
+       "2010-02-19      1        39.93       2.514  211.289143         8.106\n",
+       "2010-02-26      1        46.63       2.561  211.319643         8.106\n",
+       "2010-03-05      1        46.50       2.625  211.350143         8.106"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_features = features_df.drop(columns=['MarkDown1','MarkDown2','MarkDown3','MarkDown4','MarkDown5','IsHoliday'])\n",
+    "drop_features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +530,7 @@
        "2010-03-05      1     1      21827.90      False"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,6 +541,98 @@
     "\n",
     "info_df.set_index('Date',inplace = True)\n",
     "info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>IsHoliday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-02-05</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24924.50</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>46039.49</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-19</th>\n",
+       "      <td>1</td>\n",
+       "      <td>41595.55</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-02-26</th>\n",
+       "      <td>1</td>\n",
+       "      <td>19403.54</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-03-05</th>\n",
+       "      <td>1</td>\n",
+       "      <td>21827.90</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Store  Weekly_Sales  IsHoliday\n",
+       "Date                                      \n",
+       "2010-02-05      1      24924.50      False\n",
+       "2010-02-12      1      46039.49       True\n",
+       "2010-02-19      1      41595.55      False\n",
+       "2010-02-26      1      19403.54      False\n",
+       "2010-03-05      1      21827.90      False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_dept = info_df.drop(columns=['Dept'])\n",
+    "drop_dept.head()"
    ]
   },
   {
@@ -383,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
